<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_230sdp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/add_task"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sdp" />

    </LinearLayout>
    <EditText
        android:id="@+id/add_task_name"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/add_task_date"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/task_date"
        android:inputType="date"/>

    <CheckBox
        android:id="@+id/priority"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/priority" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/add_task"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:text="@string/add"/>



    </LinearLayout>
</LinearLayout>